--- a/CvHub/Views/Shared/_Layout.cshtml
+++ b/CvHub/Views/Shared/_Layout.cshtml
@@ -11,18 +11,24 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">CvHub</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><h4 class="cvhub"><b>CvHub</b></h4></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between" >
+                    <ul class="navbar-nav flex-grow-1 flex-row-reverse">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy"><h6 class ="tab">About us</h6></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy"><h6 class="tab">Templates</h6></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark font-weight-bold" asp-area="" asp-controller="Home" asp-action="Privacy"><h6 class="tab">Sign in</h6></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark tab" asp-area="" asp-controller="Home" asp-action="Index"><h6 class="tab">Home</h6></a>
                         </li>
                     </ul>
                 </div>
@@ -36,7 +42,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container copyright">
             &copy; 2021 - CvHub - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
