- lägger till Facebook authentication, har lyckats få fram för och efternamn från http svar från facebook.

--- a/CvHub/Views/Home/Index.cshtml
+++ b/CvHub/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div class="text-center">
+﻿<div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v10.0&appId=1011233316074653&autoLogAppEvents=1" nonce="ztNUcZI7"></script>
+    <div class="fb-login-button" data-width="" data-size="medium" data-button-type="continue_with" data-layout="default" data-auto-logout-link="true" data-use-continue-as="true"></div>
+
 </div>
