--- a/CvHub/Views/Shared/_Layout.cshtml
+++ b/CvHub/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy"><h6 class="tab">Templates</h6></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark font-weight-bold" asp-area="" asp-controller="Home" asp-action="Privacy"><h6 class="tab">Sign in</h6></a>
+                            <a class="nav-link text-dark font-weight-bold" asp-area="" asp-controller="User" asp-action="SignIn"><h6 class="tab">Sign in</h6></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark tab" asp-area="" asp-controller="Home" asp-action="Index"><h6 class="tab">Home</h6></a>
