Går att logga in och inloggnings knapp försvinner om användaren redan är inloggad.

--- a/CvHub/wwwroot/css/socialMedia.css
+++ b/CvHub/wwwroot/css/socialMedia.css
@@ -1,11 +1,4 @@
-﻿.login_form_wrapper {
-    float: left;
-    width: 100%;
-    padding-top: 40px;
-    background-color: grey
-}
-
-.login_wrapper {
+﻿.login_wrapper {
     float: left;
     width: 100%;
     background: #fff;
