--- a/CvHub/Views/Validation/SignIn.cshtml
+++ b/CvHub/Views/Validation/SignIn.cshtml
@@ -1,4 +1,4 @@
-﻿<link rel="stylesheet" href="~/css/socialMedia.css" />
+﻿@model Int32
 
 <script>
     window.fbAsyncInit = function () {
@@ -18,14 +18,32 @@
         js.src = "//connect.facebook.net/en_US/sdk.js";
         fjs.parentNode.insertBefore(js, fjs);
     }(document, 'script', 'facebook-jssdk'));
+
+
+    FB.login(function (response) {
+        if (response.status === 'connected') {
+            window.location.replace("http://www.w3schools.com");
+        } else {
+            window.location.replace("http://http://localhost:54894/Validation/FacebookSignIn");
+        }
+    });
+
+
+    FB.logout(function (response) {
+    });
 </script>
 
+<link rel="stylesheet" href="~/css/socialMedia.css" />
+
 <div class="login_wrapper text-center">
-    <div class="row">
-        <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6"> <a href="#" class="btn btn-primary facebook"> <span>Login with Facebook</span> <i class="fa fa-facebook"></i> </a> </div>
-        <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6"> <a href="#" class="btn btn-primary google-plus"> Login with Google <i class="fa fa-google-plus"></i> </a> </div>
-    </div>
-    <h2>or</h2>
+    @if (@Model == 1)
+    {
+        <div class="row">
+            <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6"> <a asp-controller="Validation" asp-action="FacebookSignIn" class="btn btn-primary facebook"> <span>Login with Facebook</span> <i class="fa fa-facebook"></i> </a> </div>
+            <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6"> <a href="#" class="btn btn-primary google-plus"> Login with Google <i class="fa fa-google-plus"></i> </a> </div>
+        </div>
+        <h2>or</h2>
+    }
     <div class="formsix-pos">
         <div class="form-group i-email"> <input type="email" class="form-control" required="" id="email2" placeholder="Email Address *"> </div>
     </div>
@@ -36,7 +54,7 @@
     <div class="login_message">
         <p>Don’t have an account ? <a href="#"> Sign up </a> </p>
     </div>
-</div> 
+</div>
 
 
 
