--- a/CvHub/Views/Validation/SignIn.cshtml
+++ b/CvHub/Views/Validation/SignIn.cshtml
@@ -1,49 +1,12 @@
-﻿@model Int32
+﻿<link rel="stylesheet" href="~/css/socialMedia.css" />
 
-<script>
-    window.fbAsyncInit = function () {
-        FB.init({
-            appId: '1011233316074653',
-            autoLogAppEvents: true,
-            xfbml: true,
-            version: 'v10.0'
-        });
-        FB.AppEvents.logPageView();
-    };
-
-    (function (d, s, id) {
-        var js, fjs = d.getElementsByTagName(s)[0];
-        if (d.getElementById(id)) { return; }
-        js = d.createElement(s); js.id = id;
-        js.src = "//connect.facebook.net/en_US/sdk.js";
-        fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-
-
-    FB.login(function (response) {
-        if (response.status === 'connected') {
-            window.location.replace("http://www.w3schools.com");
-        } else {
-            window.location.replace("http://http://localhost:54894/Validation/FacebookSignIn");
-        }
-    });
-
-
-    FB.logout(function (response) {
-    });
-</script>
-
-<link rel="stylesheet" href="~/css/socialMedia.css" />
-
+ 
 <div class="login_wrapper text-center">
-    @if (@Model == 1)
-    {
-        <div class="row">
-            <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6"> <a asp-controller="Validation" asp-action="FacebookSignIn" class="btn btn-primary facebook"> <span>Login with Facebook</span> <i class="fa fa-facebook"></i> </a> </div>
-            <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6"> <a href="#" class="btn btn-primary google-plus"> Login with Google <i class="fa fa-google-plus"></i> </a> </div>
-        </div>
-        <h2>or</h2>
-    }
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6"> <a asp-controller="Validation" asp-action="FacebookSignIn" class="btn btn-primary facebook"> <span>Login with Facebook</span> <i class="fa fa-facebook"></i> </a> </div>
+        <div class="col-lg-6 col-md-6 col-xs-12 col-sm-6"> <a href="#" class="btn btn-primary google-plus"> Login with Google <i class="fa fa-google-plus"></i> </a> </div>
+    </div>
+    <h2>or</h2>
     <div class="formsix-pos">
         <div class="form-group i-email"> <input type="email" class="form-control" required="" id="email2" placeholder="Email Address *"> </div>
     </div>
@@ -55,6 +18,7 @@
         <p>Don’t have an account ? <a href="#"> Sign up </a> </p>
     </div>
 </div>
+
 
 
 
