--- a/CvHub/Views/Shared/_Layout.cshtml
+++ b/CvHub/Views/Shared/_Layout.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@model CvHub.Controllers.ValidationController
+@using Microsoft.AspNetCore.Mvc
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -25,6 +28,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy"><h6 class="tab">Templates</h6></a>
                         </li>
                         <li class="nav-item">
+                            @if(@Model.Validation())
                             <a class="nav-link text-dark font-weight-bold" asp-area="" asp-controller="Validation" asp-action="SignIn"><h6 class="tab">Sign in</h6></a>
                         </li>
                         <li class="nav-item">
