--- a/CvHub/Views/Shared/_Layout.cshtml
+++ b/CvHub/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
 ﻿@model CvHub.Controllers.ValidationController
-@using Microsoft.AspNetCore.Mvc
 
 <!DOCTYPE html>
 <html lang="en">
@@ -28,8 +27,14 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy"><h6 class="tab">Templates</h6></a>
                         </li>
                         <li class="nav-item">
-                            @if(@Model.Validation())
-                            <a class="nav-link text-dark font-weight-bold" asp-area="" asp-controller="Validation" asp-action="SignIn"><h6 class="tab">Sign in</h6></a>
+                            @*@if (@Model.CheckLoginStatus() == 1)
+                            {*@
+                                <a class="nav-link text-dark font-weight-bold" asp-area="" asp-controller="Validation" asp-action="SignOut"><h6 class="tab">Sign out</h6></a>
+                                @*//}
+                                //else
+                                //{*@
+                                <a class="nav-link text-dark font-weight-bold" asp-area="" asp-controller="Validation" asp-action="SignIn"><h6 class="tab">Sign in</h6></a>
+                            @*}*@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark tab" asp-area="" asp-controller="Home" asp-action="Index"><h6 class="tab">Home</h6></a>
