--- a/CvHub/wwwroot/css/socialMedia.css
+++ b/CvHub/wwwroot/css/socialMedia.css
@@ -1,87 +1,131 @@
-﻿.login_wrapper {
-    float: left;
+﻿:root {
+    --input-padding-x: 1.5rem;
+    --input-padding-y: .75rem;
+}
+
+.card-signin {
+    border: 1px,solid;
+    border-radius: 1rem;
+    box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
+}
+
+    .card-signin .card-title {
+        margin-bottom: 2rem;
+        font-weight: 300;
+        font-size: 1.5rem;
+    }
+
+    .card-signin .card-body {
+        padding: 2rem;
+    }
+
+.form-signin {
     width: 100%;
-    background: #fff;
 }
 
-    .login_wrapper a.btn {
-        color: #fff;
+    .form-signin .btn {
+        font-size: 80%;
+        border-radius: 5rem;
+        letter-spacing: .1rem;
+        font-weight: bold;
+        padding: 1rem;
+        transition: all 0.2s;
+    }
+
+.form-label-group {
+    position: relative;
+    margin-bottom: 1rem;
+}
+
+    .form-label-group input {
+        height: auto;
+        border-radius: 2rem;
+    }
+
+    .form-label-group > input,
+    .form-label-group > label {
+        padding: var(--input-padding-y) var(--input-padding-x);
+    }
+
+    .form-label-group > label {
+        position: absolute;
+        top: 0;
+        left: 0;
+        display: block;
         width: 100%;
-        height: 50px;
-        padding: 6px 25px;
-        line-height: 36px;
-        margin-bottom: 20px;
-        text-align: left;
-        border-radius: 5px;
-        background: #4385f5;
-        font-size: 16px;
+        margin-bottom: 0;
+        /* Override default `<label>` margin */
+        line-height: 1.5;
+        color: #495057;
+        border: 1px solid transparent;
+        border-radius: .25rem;
+        transition: all .1s ease-in-out;
     }
 
-    .login_wrapper a i {
-        float: right;
-        margin: 0;
-        line-height: 35px
+    .form-label-group input::-webkit-input-placeholder {
+        color: transparent;
     }
 
-    .login_wrapper a.google-plus {
-        background: #db4c3e;
-        border: 1px solid #db4c3e
+    .form-label-group input:-ms-input-placeholder {
+        color: transparent;
     }
 
-    .login_wrapper h2 {
-        font-size: 18px;
-        font-weight: 500;
-        margin-bottom: 20px;
-        color: #111;
-        line-height: 20px;
-        text-transform: uppercase;
-        text-align: center;
-        position: relative
+    .form-label-group input::-ms-input-placeholder {
+        color: transparent;
     }
 
-.login_wrapper .formsix-pos,
-.formsix-e {
-    position: relative
-}
-
-.form-group {
-    margin-bottom: 15px
-}
-
-
-.login_btn_wrapper {
-    padding-bottom: 20px;
-    margin-bottom: 30px;
-}
-
-    .login_btn_wrapper a.login_btn {
-        text-align: center;
-        text-transform: uppercase
+    .form-label-group input::-moz-placeholder {
+        color: transparent;
     }
 
-.login_message p {
-    text-align: center;
-    font-size: 16px;
-    margin: 0
+    .form-label-group input::placeholder {
+        color: transparent;
+    }
+
+    .form-label-group input:not(:placeholder-shown) {
+        padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
+        padding-bottom: calc(var(--input-padding-y) / 3);
+    }
+
+        .form-label-group input:not(:placeholder-shown) ~ label {
+            padding-top: calc(var(--input-padding-y) / 3);
+            padding-bottom: calc(var(--input-padding-y) / 3);
+            font-size: 12px;
+            color: #777;
+        }
+
+.btn-google {
+    color: white;
+    background-color: #ea4335;
 }
 
-p {
-    color: #999999;
-    font-size: 14px;
-    line-height: 24px
+.btn-facebook {
+    color: white;
+    background-color: #3b5998;
 }
 
-.login_wrapper a.login_btn:hover {
-    background-color: #2c6ad4;
-    border-color: #2c6ad4
+/* Fallback for Edge
+-------------------------------------------------- */
+
+@supports (-ms-ime-align: auto) {
+    .form-label-group > label {
+        display: none;
+    }
+
+    .form-label-group input::-ms-input-placeholder {
+        color: #777;
+    }
 }
 
-.login_wrapper a.btn:hover {
-    background-color: #2c6ad4;
-    border-color: #2c6ad4
-}
+/* Fallback for IE
+-------------------------------------------------- */
 
-.login_wrapper a.google-plus:hover {
-    background: #bd4033;
-    border-color: #bd4033
+@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    .form-label-group > label {
+        display: none;
+    }
+
+    .form-label-group input:-ms-input-placeholder {
+        color: #777;
+    }
 }
