About Us med bild för våra profiler

--- a/CvHub/Views/Home/AboutUs.cshtml
+++ b/CvHub/Views/Home/AboutUs.cshtml
@@ -16,6 +16,15 @@
             width: 150px;
             left: 25%;
             margin-bottom: 15%;
+            
+        }
+    </style>
+    <style>
+        .img-circle{
+            border-top-left-radius: 50% 50%;
+    border-top-right-radius: 50% 50%;
+    border-bottom-right-radius: 50% 50%;
+    border-bottom-left-radius: 50% 50%;
         }
     </style>
 </head>
@@ -23,52 +32,51 @@
 
     <div class="justify-content-md-center">
         <h1>About Us</h1>
-        <p>CVHub ditt CV online</p>
+        <p>CVHub your CV online</p>
     </div>
 
-    <div class="Text">
+    
         <div class="row">
             <div class="col-sm-4">
-                <h3>Hur allt började </h3>
+                <h3>How it all started </h3>
                 <p>
-                    Vi är 4 studenter som pluggade Objekt Orienterad Programmering(OOP) på handelsakademin när vi fick chansen att göra ett projekt    arbete. Då vi alla hade egna erfarenhet om hur svårt det är att få ett jobb och därmed vet vikten med att ha ett bra CV för att få ett jobb
-                    därför har vi bestämt oss att programmera en gratis sida där man enkelt kan hitta ett redan färdigt Cv.
+                    We are 4 students who studied Object Oriented Programming (OOP) at the Commercial Academy when we got the chance to do a project work. Since we all had our own experience of how difficult it is to get a job and thus know the importance of having a good CV to get a job, therefore we have decided to program a free page where you can easily find an already completed CV.
                 </p>
 
-                <h4>För oss är en enkel väg till ett bra CV viktigast</h4>
-                <p>Vi vill att våra användare ska ha det så enkelt som möjligt att få tag i en färdig mall för att kunna skapa ett så bra CV som det går utan att bli debiterad något per månad</p>
+                <h4>For us is a simple path to a good CV is most important</h4>
+                <p>We want our users to have it as easy as possible to get a ready-made template to be able to create as good a CV as possible without being charged anything per month</p>
             </div>
             
             <div class="col-sm-2">
-                <img src="cinqueterre.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
+                <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" alt="Cinque Terre" width="95" height="100">
                 <h3>Felipe </h3>
-                <h6>Full stack</h6>
+                <h6><u>Full stack</u></h6>
                 <p> “Oh I’m sorry did I break your conversation?” – Samuel L. Jackson </p>
             </div>
             <div class="col-sm-2">
-                <img src="cinqueterre.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
+                <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" alt="Cinque Terre" width="95" height="100">
                 <h3>Rebecca</h3>
-                <h6>Front-end</h6>
+                <h6><u>Front-end</u></h6>
                 <p>“I grew up in the South with guns everywhere and we never shot anyone. This [shooting] is about people who aren’t taught the value of life.” – Samuel L. Jackson</p>
 
             </div>
             <div class="col-sm-2">
-                <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
+                <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" alt="Cinque Terre" width="95" height="100">
                 <h3>  Tobias  </h3>
-                <h6>Back-end</h6>
+                <h6><u>Back-end</u></h6>
                 <p>.“Take a stand for what’s right. Raise a ruckus and make a change. You may not always be popular, but you’ll be part of something larger and bigger and greater than yourself. Besides, making history is extremely cool.” – Samuel L. Jackson</p>
 
             </div>
             <div class="col-sm-2">
-                <img src="cinqueterre.jpg" class="img-circle" alt="Cinque Terre" width="304" height="236">
+                <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" width="95" height="100">
                 <h3>Vivvi</h3>
-                <p>Full stack</p>
+                <h6><u>Full stack</u></h6>
+                <p>“I just always knew that I lived in two worlds. There was the world of my house and community, but to make my way in that white world I had to modify the way I spoke and acted. I had to sometimes not make direct eye contact.” – Samuel L. Jackson</p>
             </div>
 
               <div class="H">  <a href="https://localhost:44382/"><bold>Home</bold></a> </div>
-
-            </div>
-        </div>
+         </div>
+       
         @*Footer button*@
         @*<button data-toggle="collapse" data-target="#demo">Collapsible</button>
 
