--- a/CvHub/wwwroot/css/Container/StyleSheet.css
+++ b/CvHub/wwwroot/css/Container/StyleSheet.css
@@ -13,6 +13,13 @@ a:hover {
     left: 50%;
     bottom: 10%
 }
+.img {
+    border-top-left-radius: 50% 50%;
+    border-top-right-radius: 50% 50%;
+    border-bottom-right-radius: 50% 50%;
+    border-bottom-left-radius: 50% 50%;
+}
+
 
 
 
