--- a/CvHub/wwwroot/css/site.css
+++ b/CvHub/wwwroot/css/site.css
@@ -9,8 +9,8 @@ a.navbar-brand {
 
 /* Changes title color */
 
-h4.cvhub {
-    color: #0f4c75;
+h4 {
+    color: #125e8a;
 }
 
 /* Changes tab color */
