--- a/CvHub/wwwroot/css/socialMedia.css
+++ b/CvHub/wwwroot/css/socialMedia.css
@@ -4,7 +4,6 @@
 }
 
 .card-signin {
-    border: 1px,solid;
     border-radius: 1rem;
     box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
 }
@@ -16,7 +15,7 @@
     }
 
     .card-signin .card-body {
-        padding: 2rem;
+        padding: 2rem !important;
     }
 
 .form-signin {
@@ -54,7 +53,6 @@
         display: block;
         width: 100%;
         margin-bottom: 0;
-        /* Override default `<label>` margin */
         line-height: 1.5;
         color: #495057;
         border: 1px solid transparent;
@@ -70,29 +68,10 @@
         color: transparent;
     }
 
-    .form-label-group input::-ms-input-placeholder {
-        color: transparent;
-    }
-
     .form-label-group input::-moz-placeholder {
         color: transparent;
     }
 
-    .form-label-group input::placeholder {
-        color: transparent;
-    }
-
-    .form-label-group input:not(:placeholder-shown) {
-        padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
-        padding-bottom: calc(var(--input-padding-y) / 3);
-    }
-
-        .form-label-group input:not(:placeholder-shown) ~ label {
-            padding-top: calc(var(--input-padding-y) / 3);
-            padding-bottom: calc(var(--input-padding-y) / 3);
-            font-size: 12px;
-            color: #777;
-        }
 
 .btn-google {
     color: white;
@@ -104,28 +83,20 @@
     background-color: #3b5998;
 }
 
-/* Fallback for Edge
--------------------------------------------------- */
-
 @supports (-ms-ime-align: auto) {
     .form-label-group > label {
         display: none;
     }
 
-    .form-label-group input::-ms-input-placeholder {
-        color: #777;
+    @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+        .form-label-group > label {
+            display: none;
+        }
+
+        .form-label-group input:-ms-input-placeholder {
+            color: #777;
+        }
     }
 }
 
-/* Fallback for IE
--------------------------------------------------- */
 
-@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
-    .form-label-group > label {
-        display: none;
-    }
-
-    .form-label-group input:-ms-input-placeholder {
-        color: #777;
-    }
-}
