--- a/CvHub/Views/User/MyPage.cshtml
+++ b/CvHub/Views/User/MyPage.cshtml
@@ -33,20 +33,20 @@
                         <input type="email" class="form-control" placeholder="email">
                     </div>
                     <div class="profile-form col-md-12">
-                        <label class="labels">Address</label>
-                        <input type="text" class="form-control" placeholder="address">
-                    </div>
-                    <div class="profile-form col-md-12">
-                        <label class="labels">Education</label>
-                        <input type="text" class="form-control" placeholder="education">
+                        <label class="labels">Phone Number</label>
+                        <input type="text" class="form-control" placeholder="phone number">
                     </div>
                     <div class="profile-form col-md-6">
-                        <label class="labels">Country</label>
-                        <input type="text" class="form-control" placeholder="country">
+                        <label class="labels">City</label>
+                        <input type="text" class="form-control" placeholder="city">
                     </div>
                     <div class="profile-form col-md-6">
                         <label class="labels">State/Region</label>
                         <input type="text" class="form-control" placeholder="state/region">
+                    </div>
+                    <div class="profile-form col-md-12">
+                        <label class="labels">Country</label>
+                        <input type="text" class="form-control" placeholder="country">
                     </div>
                 </div>
             </div>
