--- a/CvHub/Views/Template/Cv.cshtml
+++ b/CvHub/Views/Template/Cv.cshtml
@@ -22,7 +22,7 @@
                 <h1> Firstname Lastname</h1>
                 <h4>title</h4>
                 <div class="btn-group-vertical float">
-                    <a class="btn" href="#aboutMe" role="button">About me</a>
+                    <a class="btn" href="#profilePic" role="button">About me</a>
                     <a class="btn" href="#education" role="button">Education</a>
                     <a class="btn" href="#work" role="button">Work</a>
                     <a class="btn" href="#contactMe" role="button">Contact</a>
