--- a/CvHub/Views/Template/Index.cshtml
+++ b/CvHub/Views/Template/Index.cshtml
@@ -1,12 +1,13 @@
 ﻿<meta name="keywords" content="About Us, CV, Job Application, Help with CV, CVHub">
 <link rel="stylesheet" href="~/css/template/index.css" />
 
+
+
+<h3>Choose a template</h3>
+
 <div class="container">
 
-
-    <h3>Choose a template</h3>
-
-    <div class="row" style="margin:5% auto 0 auto;">
+    <div class="row templates" style="margin:8% auto 0 auto;">
         <div class="col">
             <img class="comingsoon" src="~/css/template/img/comingsoon.svg" style="width:70%" title="Elegant" alt="Elegant" />
         </div>
@@ -16,13 +17,13 @@
 
     </div>
 
-    <div class="row" style="margin:3% auto 0 auto;">
+    <div class="row templates" style="margin:8% auto 8% auto;">
         <div class="col">
-            <h5 style="margin-top:5%">Coming soon!</h5>
+            <h5 style="margin-top:0.5%">Coming soon!</h5>
         </div>
         <div class="col">
             <a class="btn btn-primary" asp-controller="Template" asp-action="Cv" >View</a> @*Should oper the page Cv.cshtml*@
-        
+            <a class="btn btn-light" asp-controller="Template" asp-action="TemplateForm">Choose</a>
         </div>
     </div>
 
