--- a/CvHub/Views/Home/Index.cshtml
+++ b/CvHub/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 p-sm-2 p-md-2 p-lg-5 p-xl-5">
+        <div class="col-sm-6 col-md-6 col-lg-8 col-xl-4 p-sm-2 p-md-2 p-lg-5 p-xl-5">
             <div class="card-signin">
                 <div class="card-body">
                     <h5 class="card-title text-center">Sign In</h5>
@@ -28,8 +28,8 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-4 col-xl-4 p-sm-2 p-md-2 p-lg-5 p-xl-5 offset-sm-0 offset-md-0 offset-lg-4 offset-xl-4">
-            <img class="picture" src="~/Pic/Favicon.png" alt="CV">
+        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-4 p-sm-2 p-md-2 p-lg-5 p-xl-5 offset-xl-4">
+            <img src="~/Pic/Favicon.png" alt="CV">
         </div>
     </div>
 </div>
