Html css changes

--- a/CvHub/Views/Home/AboutUs.cshtml
+++ b/CvHub/Views/Home/AboutUs.cshtml
@@ -10,23 +10,6 @@
     <meta name="keywords" content="About Us, CV, Job Application, Help with CV, CVHub">
     <meta name="author" content="Felipe Nyberg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        .col-sm-2 {
-            top: 150px;
-            width: 150px;
-            left: 25%;
-            margin-bottom: 15%;
-            
-        }
-    </style>
-    <style>
-        .img-circle{
-            border-top-left-radius: 50% 50%;
-    border-top-right-radius: 50% 50%;
-    border-bottom-right-radius: 50% 50%;
-    border-bottom-left-radius: 50% 50%;
-        }
-    </style>
 </head>
 
 
@@ -36,52 +19,53 @@
     </div>
 
     
-        <div class="row">
-            <div class="col-sm-4">
-                <h3>How it all started </h3>
-                <p>
-                    We are 4 students who studied Object Oriented Programming (OOP) at the Commercial Academy when we got the chance to do a project work. Since we all had our own experience of how difficult it is to get a job and thus know the importance of having a good CV to get a job, therefore we have decided to program a free page where you can easily find an already completed CV.
-                </p>
+    <div class="row">
+        
+        <div class="col-sm-4">
+            <h3>How it all started </h3>
+            <p>
+                We are 4 students who studied Object Oriented Programming (OOP) at the Commercial Academy when we got the chance to do a project work. Since we all had our own experience of how difficult it is to get a job and thus know the importance of having a good CV to get a job, therefore we have decided to program a free page where you can easily find an already completed CV.
+            </p>
 
-                <h4>For us is a simple path to a good CV is most important</h4>
-                <p>We want our users to have it as easy as possible to get a ready-made template to be able to create as good a CV as possible without being charged anything per month</p>
-            </div>
-            
-            <div class="col-sm-2">
-                <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" alt="Cinque Terre" width="95" height="100">
-                <h3>Felipe </h3>
-                <h6><u>Full stack</u></h6>
-                <p> “Oh I’m sorry did I break your conversation?” – Samuel L. Jackson </p>
-            </div>
-            <div class="col-sm-2">
-                <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" alt="Cinque Terre" width="95" height="100">
-                <h3>Rebecca</h3>
-                <h6><u>Front-end</u></h6>
-                <p>“I grew up in the South with guns everywhere and we never shot anyone. This [shooting] is about people who aren’t taught the value of life.” – Samuel L. Jackson</p>
+            <h4>For us is a simple path to a good CV is most important</h4>
+            <p>We want our users to have it as easy as possible to get a ready-made template to be able to create as good a CV as possible without being charged anything per month</p>
+        </div>
 
-            </div>
-            <div class="col-sm-2">
-                <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" alt="Cinque Terre" width="95" height="100">
-                <h3>  Tobias  </h3>
-                <h6><u>Back-end</u></h6>
-                <p>.“Take a stand for what’s right. Raise a ruckus and make a change. You may not always be popular, but you’ll be part of something larger and bigger and greater than yourself. Besides, making history is extremely cool.” – Samuel L. Jackson</p>
+        <div class="col-sm-12 col-lg-2 col-md-2">
+            <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" alt="Cinque Terre" width="95" height="100">
+            <h3>Felipe </h3>
+            <h6><u>Full stack</u></h6>
+            <p> “Oh I’m sorry did I break your conversation?” – Samuel L. Jackson </p>
+        </div>
+        <div class="col-sm-12 col-lg-2 col-md-2">
+            <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" alt="Cinque Terre" width="95" height="100">
+            <h3>Rebecca</h3>
+            <h6><u>Front-end</u></h6>
+            <p>“I grew up in the South with guns everywhere and we never shot anyone. This [shooting] is about people who aren’t taught the value of life.” – Samuel L. Jackson</p>
 
-            </div>
-            <div class="col-sm-2">
-                <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" width="95" height="100">
-                <h3>Vivvi</h3>
-                <h6><u>Full stack</u></h6>
-                <p>“I just always knew that I lived in two worlds. There was the world of my house and community, but to make my way in that white world I had to modify the way I spoke and acted. I had to sometimes not make direct eye contact.” – Samuel L. Jackson</p>
-            </div>
+        </div>
+        <div class="col-sm-12 col-lg-2 col-md-2">
+            <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" alt="Cinque Terre" width="95" height="100">
+            <h3>  Tobias  </h3>
+            <h6><u>Back-end</u></h6>
+            <p>.“Take a stand for what’s right. Raise a ruckus and make a change. You may not always be popular, but you’ll be part of something larger and bigger and greater than yourself. Besides, making history is extremely cool.” – Samuel L. Jackson</p>
 
-              <div class="H">  <a href="https://localhost:44382/"><bold>Home</bold></a> </div>
-         </div>
-       
-        @*Footer button*@
-        @*<button data-toggle="collapse" data-target="#demo">Collapsible</button>
+        </div>
+        <div class="col-sm-12 col-lg-2 col-md-2">
+            <img src="~/css/Pictures/Addicteddesign homeoffice.jpg" class="img-circle" width="95" height="100">
+            <h3>Vivvi</h3>
+            <h6><u>Full stack</u></h6>
+            <p>“I just always knew that I lived in two worlds. There was the world of my house and community, but to make my way in that white world I had to modify the way I spoke and acted. I had to sometimes not make direct eye contact.” – Samuel L. Jackson</p>
+        </div>
 
-        <div id="demo" class="collapse">
-            Lorem ipsum dolor text....*@
+        <div class="container">
+            <div class="btn-group-vertical float">
+                <a class="btn" href="https://localhost:44382/Home" role="button">Home</a>                           
+            </div>
+        </div>
+    </div>
+
+      
         
     
     
