--- a/CvHub/wwwroot/css/Container/StyleSheet.css
+++ b/CvHub/wwwroot/css/Container/StyleSheet.css
@@ -8,19 +8,36 @@ a:hover {
     background-color: #ddd;
     color: black;
 }
-.H {
+
+
+.btn-group-vertical {
     position: fixed;
-    left: 50%;
-    bottom: 10%
+    text-align: right;
+     right: 50%;
+    bottom: 10%;
 }
-.img {
+
+.btn {
+    background-color: #98c1d9;
+    color:#fff;
+    background-position:bottom;
+}
+
+    .btn:hover {
+        background-color: #125e8a;
+        color:#e7ebef;
+        
+    }
+.img-circle {
     border-top-left-radius: 50% 50%;
     border-top-right-radius: 50% 50%;
     border-bottom-right-radius: 50% 50%;
     border-bottom-left-radius: 50% 50%;
 }
+.row {
+    top: 35%;
+    width: 12%;
+    left: 25%;
+    margin-bottom: 15%;
+}
 
-
-
-
- 
